syntax = "proto3";

package app.simplecloud.controller.shared.proto;

option java_package = "app.simplecloud.controller.shared.proto";
option java_multiple_files = true;

import "controller_types.proto";

message GetGroupByNameRequest {
  string name = 1;
}

message GetGroupByNameResponse {
  GroupDefinition group = 2;
}

service ControllerGroupService {
  rpc getGroupByName(GetGroupByNameRequest) returns (GetGroupByNameResponse);
}